// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de <GifGrid/> Debe de mostrar el componente correctamente. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash"
  >
    One Punch Man
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas de <GifGrid/> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash"
  >
    One Punch Man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Cualquier cosa"
      url="https://localhost/cualquiercosa/fd.jpg"
    />
    <GifGridItem
      id="abcd"
      key="abcd"
      title="Cualquier cosa 2"
      url="https://localhost/cualquiercosa/fd.jpg"
    />
  </div>
</Fragment>
`;
